Add basic build

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,7 @@ Justin Cormack <justin.cormack@docker.com>
 Kunal Kushwaha <kushwaha_kunal_v7@lab.ntt.co.jp>
 Lajos Papp <lalyos@yahoo.com>
 Matt Rickard <mrick@google.com>
+Marek Obuchowicz <marek@korekontrol.eu>
 Michael Crosby <crosbymichael@gmail.com>
 Miyachi Katsuya <miyachi_katsuya@r.recruit.co.jp>
 Nao YONASHIRO <yonashiro@r.recruit.co.jp>
